--- a/gelec-2.html
+++ b/gelec-2.html
@@ -206,7 +206,7 @@ drift.load('7uhfkezcagg4');
                             </li>
                         <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="" aria-expanded="false">Blog</a><div class="dropdown-menu">
                           <a class="dropdown-item" href="les_un_mois_du_site.html">Les 1 Mois du Site</a>
-                          <a class="dropdown-item" href="statistiques_du_premier_mois.html">Statistiques du Premier Mois</a>
+                          <a class="dropdown-item" href="statistiques_du_premier_mois.html">STATISTIQUES du Premier Mois</a>
                           <a class="dropdown-item" href="84_jours_du_site.html">84 Jours pour sortir de l'attentisme !</a>
                         </li>
                         <li class="nav-item"><a class="nav-link link" href="index.html#form1-5">CONTACT</a></li>
