Ajout des emplois du temps

--- a/gind-2.html
+++ b/gind-2.html
@@ -241,7 +241,7 @@ drift.load('7uhfkezcagg4');
                     <p class="mbr-section-lead lead">Les cours de Génie Industriel- 2</p>
 
                     <div class="mbr-section-btn"><a class="btn btn-lg btn-white" style="font-size: 30px;" href="#S7" target="_blank">------- S7 ------</a></div>
-
+                    <div class="mbr-section-btn"><a class="btn btn-lg btn-warning" style="font-size: 30px;" href="downloads/gind-2/s7/Emploi/emploi_gind.pdf" target="_blank">Emploi du temps <br> de la semaine</a></div>
                     <!-- <div class="mbr-section-btn"><a class="btn btn-lg btn-white" style="font-size: 40px;" href="#S6" target="_blank">------- S6 ------</a></div> -->
                 </div>
             </div>
@@ -304,13 +304,35 @@ drift.load('7uhfkezcagg4');
             <div class="container" >
                 <div class="card cart-block" >
                     <div class="card-img"><span class="etl-icon mbr-iconfont mbr-iconfont-features2" style="color: white;"></span></div>
-                    <div class="card-block" >
+                    <div class="card-block">
                         <h4 class="card-title" style="font-size:30px; color:#fff;">Algorithmique Et Programmation En C++ Et Fortran </h4>
 
-                        
+
                         <div class="card-btn">
-                            <a href="downloads/gm-2/s7/Algorithme_et_programmation_en c++_et_fortran/Algorithmique_MEC2_IND2_UIC_2018_2019.pdf"
-                                class="btn btn-white" target="_blank">Chapitre 1
+                            <a href="downloads/gm-2/s7/Algorithme_et_programmation_en_c++_et_fortran/Algorithmique_MEC2_IND2_UIC_2018_2019.pdf"
+                               class="btn btn-white" target="_blank">
+                                Chapitre 1
+                                <span class="mbri-down mbr-iconfont mbr-iconfont-btn"></span>
+                            </a>
+                        </div>
+                        <div class="card-btn">
+                            <a href="downloads/gm-2/s7/Algorithme_et_programmation_en_c++_et_fortran/Introduction_au_langage_Cpp.pdf"
+                               class="btn btn-white" target="_blank">
+                                Introduction <br>au langage C++
+                                <span class="mbri-down mbr-iconfont mbr-iconfont-btn"></span>
+                            </a>
+                        </div>
+                        <div class="card-btn">
+                            <a href="downloads/gm-2/s7/Algorithme_et_programmation_en_c++_et_fortran/Cours_de_Fortran_90.pdf"
+                               class="btn btn-white" target="_blank">
+                                Cours Fortran 90 
+                                <span class="mbri-down mbr-iconfont mbr-iconfont-btn"></span>
+                            </a>
+                        </div>
+                        <div class="card-btn">
+                            <a href="downloads/gm-2/s7/Algorithme_et_programmation_en_c++_et_fortran/Docs_Cpp_Cours_Fortran.zip"
+                               class="btn btn-white" target="_blank">
+                                Exemples et applications <br> en C++
                                 <span class="mbri-down mbr-iconfont mbr-iconfont-btn"></span>
                             </a>
                         </div>
@@ -425,12 +447,18 @@ drift.load('7uhfkezcagg4');
                             </a>
                         </div>
                         <div class="card-btn">
-                            <a href="downloads/gi-2/s7/gestion_budgetaire/GB_COURS2_Le_Budget.pdf" class="btn btn-white" target="_blank">Cours 2<br> le budget
+                            <a href="downloads/gi-2/s7/gestion_budgetaire/GB_COURS2_Le_Budget.pdf" class="btn btn-white" target="_blank">Cours 2<br> Le budget
                                 <span class="mbri-down mbr-iconfont mbr-iconfont-btn"></span>
                             </a>
                         </div>
                         <div class="card-btn">
-                            <a href="downloads/gi-2/s7/gestion_budgetaire/GB_COURS_3_Les_outils_de_la_gestion_Budgetaire.pdf" class="btn btn-white" target="_blank">Cours 3<br> outils de la gestion<br> budgetaire
+                            <a href="downloads/gi-2/s7/gestion_budgetaire/GB_COURS_3_Les_outils_de_la_gestion_Budgetaire.pdf" class="btn btn-white" target="_blank">Cours 3<br> Outils de la gestion<br> budgetaire
+                                <span class="mbri-down mbr-iconfont mbr-iconfont-btn"></span>
+                            </a>
+                        </div>
+                        <div class="card-btn">
+                            <a href="downloads/gi-2/s7/gestion_budgetaire/GB_COURS_4_Le_Budget_par_Activite_Cas_Pratiques.pdf" class="btn btn-white"
+                                target="_blank">Cours 4<br>Cas pratiques
                                 <span class="mbri-down mbr-iconfont mbr-iconfont-btn"></span>
                             </a>
                         </div>
