--- a/gm-2.html
+++ b/gm-2.html
@@ -241,6 +241,7 @@ drift.load('7uhfkezcagg4');
                     <p class="mbr-section-lead lead">Les cours de Génie Mécanique- 2</p>
 
                     <div class="mbr-section-btn"><a class="btn btn-lg btn-white" style="font-size: 30px;" href="#S7" target="_blank">------- S7 ------</a></div>
+                    <div class="mbr-section-btn"><a class="btn btn-lg btn-warning" style="font-size: 30px;" href="downloads/gm-2/s7/Emploi/emploi_gm.pdf" target="_blank">Emploi du temps <br> de la semaine</a></div>
 
                     <!-- <div class="mbr-section-btn"><a class="btn btn-lg btn-white" style="font-size: 40px;" href="#S6" target="_blank">------- S6 ------</a></div> --> 
                 </div>
