modification du bouton

--- a/miage2.html
+++ b/miage2.html
@@ -298,7 +298,7 @@ drift.load('7uhfkezcagg4');
                     <div class="card-img"><span class="etl-icon mbr-iconfont mbr-iconfont-features2" style="color: rgb(255, 255, 255);"></span></div>
                     <div class="card-block">
                         <h4 class="card-title" style="font-size:30px;">Programmation structurée 2</h4>
-                        <div class="card-btn">  <a href="" class="btn btn-info" target="_blank">chap 1 &nbsp;<span class="mbri-down mbr-iconfont mbr-iconfont-btn"></span></a></div>
+                        <div class="card-btn">  <a href="downloads/Miage2/S3/Programmation structurée 2/Cours_Prog Struct_2_Part1.pdf" class="btn btn-info" target="_blank">chap 1 &nbsp;<span class="mbri-down mbr-iconfont mbr-iconfont-btn"></span></a></div>
 
                         
                     </div>
