ajout de 2 boutons

--- a/miage2.html
+++ b/miage2.html
@@ -299,6 +299,8 @@ drift.load('7uhfkezcagg4');
                     <div class="card-block">
                         <h4 class="card-title" style="font-size:30px;">Programmation structurée 2</h4>
                         <div class="card-btn">  <a href="downloads/Miage2/S3/Programmation structurée 2/Cours_Prog Struct_2_Part1.pdf" class="btn btn-info" target="_blank">chap 1 &nbsp;<span class="mbri-down mbr-iconfont mbr-iconfont-btn"></span></a></div>
+                        <div class="card-btn">  <a href="downloads/Miage2/S3/Programmation structurée 2/Cours_Prog Struct_2_Part2.pdf" class="btn btn-info" target="_blank">chap 2 &nbsp;<span class="mbri-down mbr-iconfont mbr-iconfont-btn"></span></a></div>
+                        <div class="card-btn">  <a href="downloads/Miage2/S3/Programmation structurée 2/Cours_Prog Struct_2_Part3.pdf" class="btn btn-info" target="_blank">chap 3 &nbsp;<span class="mbri-down mbr-iconfont mbr-iconfont-btn"></span></a></div>
 
                         
                     </div>
